<resources>
    <string name="app_name">Languee</string>
    <string name="open_nav">Open Navigation</string>
    <string name="close_nav">Close Navigation</string>
    <string name="close_button">Close</string>
    <string name="frontText">Front</string>
    <string name="backText">Back</string>
    <string name="view">View</string>
    <string name="add">Add</string>
    <string name="change_photo">Change</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="ai_input_hint">Type your message here...</string>
    <string name="ask">Ask</string>
    <string name="create_set">Create a Set</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="flashcard">Flashcard</string>
    <string name="search">search</string>
    <string name="sort">Sort by</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="previous">PREV</string>
    <string name="next">NEXT</string>
    <string name="submit">Submit</string>
    <string name="create_quiz">Create a Quiz</string>
    <string name="number_of_questions">Number of Questions</string>
    <string name="keyword">keyword</string>
    <string name="quiz">Quiz</string>
    <string name="write">Write</string>
    <string name="write_input_hint">Type your content here...</string>
    <string name="check">Check</string>
    <string name="article">Article</string>
    <string name="hello_exclamation">Hello!</string>
    <string name="send">Send</string>
    <string name="summarize">Summarize</string>
    <string name="go_to_ai">Ask AI Question</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="ai">AI</string>

    <string name="language">Language</string>
    <string name="google_gemini_api_key">Google Gemini API Key</string>
    <string name="ai_generating_response">generating response...</string>

    <string name="fail_to_generate_response">Failed to generate response</string>
    <string name="fail_to_copy_message">Failed to copy message</string>
    <string name="message_copied_to_clipboard">Message copied to clipboard</string>
    <string name="please_enter_a_title">Please enter a title</string>
    <string name="please_enter_a_message">Please enter a message</string>

    <string name="are_you_sure">Are you sure you want to perform this action?</string>
    <string name="confirm">Confirm</string>
    <string name="title_cannot_be_empty">Title cannot be empty</string>
    <string name="flashcard_set_cannot_be_empty">Flashcard cannot be empty</string>
    <string name="select_photo_first">Please select a photo first</string>
    <string name="no_available_quiz">No available quiz</string>
    <string name="no_available_flashcard_set">No available flashcard set</string>
    <string name="delete_flashcard_set">Delete Flashcard Set</string>
    <string name="enter_maximum_number_of_questions">Enter maximum number of questions</string>
    <string name="the_maximum_number_of_flashcard_is">The maximum number of flashcards is</string>

    <string name="delete_quiz">Delete Quiz</string>
    <string name="please_enter_a_content">Please enter a content</string>
    <string name="delete_note">Delete Note</string>
    <string name="please_enter_a_valid_api_key">Please enter a valid API key</string>
    <string name="fail_to_setup_model">Failed to setup Gemini model</string>
    <string name="developerMode">Developer Mode</string>
    <string name="import_default_data">Import Default Data</string>
    <string name="import_text">Import</string>
    <string name="clear">Clear</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="start_a_quiz">Start a Random Quiz</string>
    <string name="view_a_flashcard_set">View a Flashcard Set</string>
    <string name="translate">Translate</string>
    <string name="translate_input_hint">Type your word here...</string>
    <string name="write_something">Write Something</string>
    <string name="progress">My Progress</string>
    <string name="start_action">Start Action</string>
    <string name="explain">Explain</string>
    <string name="notification_time">Daily Reminder</string>
    <string name="disabled">disabled</string>
    <string name="enabled">enabled</string>

    <string name="number_of_articles">Articles Created</string>
    <string name="number_of_flashcard_set">Flashcard Set Created</string>
    <string name="number_of_flashcards">Flashcard Created</string>
    <string name="number_of_quiz_done">Quiz Done</string>

    <string name="notification_title">Language Time</string>
    <string name="notification_content">Time to start learning!</string>
    <string name="alarm_set">Notification is Set</string>
    <string name="alarm_cancel">Notification is cancelled</string>
    <string name="alarm_set_fail">Failed to set notification</string>
    <string name="notification_permission_granted">Notification permission granted</string>
    <string name="notification_permission_denied">Notification permission denied</string>
    <string name="notification_permission_not_supported">Check notification permission</string>
    <string name="invalid_time">Invalid Time, please enter in HH:MM format</string>


</resources>