<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    style="@style/ScreenBackground">

    <TextView
        android:id="@+id/settingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/settings"
        style="@style/TitleText1"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/settingTitle"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/settingTitle"
            android:padding="40px">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/settingLanguageTextView"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/language"/>
                <Spinner
                    android:id="@+id/settingLanguageSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/google_gemini_api_key"/>
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:id="@+id/settingGoogleGeminiApiKeyEditText"
                android:maxLines="1"
                android:inputType="text"
                android:hint="AIza..." />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/settingImportDefaultDataTextView"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="90"
                    android:text="@string/import_default_data"/>

                <Button
                    android:id="@+id/settingImportDefaultDataButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/import_text"
                    style="@style/Button1"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/settingClearDataTextView"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="90"
                    android:text="@string/clear_all_data"/>

                <Button
                    android:id="@+id/settingClearAllDataButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/clear"
                    style="@style/Button2"/>
            </LinearLayout>


            <Switch
                android:id="@+id/settingDeveloperModeSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:text="@string/developerMode" />

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <Button
                android:id="@+id/settingSaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                style="@style/Button1"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>