<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/writeCreateFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WriteCreateFragment"
    style="@style/ScreenBackground">

    <!-- TODO: Update blank fragment layout -->
<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:text="Write Fragment"-->
<!--        android:textSize="24sp"-->
<!--        android:gravity="center"-->
<!--        android:textColor="@color/lavender"/>-->

    <TextView
        android:id="@+id/writeEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/write"
        style="@style/TitleText1"/>

    <LinearLayout
        android:id="@+id/writeMainLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/writeEdit"
        android:orientation="vertical"
        android:weightSum="40">

        <EditText
            android:id="@+id/writeEditTextTitle"
            style="@style/OneLineEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/title"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/writeEditTextContent"
            style="@style/LongEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="39"
            android:maxHeight="400dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/write_input_hint"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:gravity="top"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="10dp">
            <Button
                android:id="@+id/writeButtonCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:text="@string/check"
                style="@style/Button2"/>
            <Button
                android:id="@+id/writeButtonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:text="@string/save"
                style="@style/Button1"/>
        </LinearLayout>



    </LinearLayout>


<!--    <TextView-->
<!--        android:id="@+id/writeTextViewNotes"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/writeButtonSave"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:background="@color/purple_200"-->
<!--        android:gravity="center"-->
<!--        android:text="Notes:"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="18sp"-->
<!--        android:textStyle="bold" />-->

<!--    <LinearLayout-->
<!--        android:id="@+id/writeSortLinearLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        android:layout_below="@id/writeTextViewNotes"-->
<!--        android:layout_margin="10dp">-->

<!--        <TextView-->
<!--            android:id="@+id/writeTextViewSort"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Sort by:"-->
<!--            android:textSize="18dp"-->
<!--            android:textColor="@color/black"-->
<!--            android:textStyle="bold" />-->

<!--        <Spinner-->
<!--            android:id="@+id/writeSortSpinner"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->

<!--    </LinearLayout>-->


<!--    <ScrollView-->
<!--        android:id="@+id/writeScrollViewNotes"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_below="@id/writeSortLinearLayout"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:layout_weight="1">-->


<!--        <LinearLayout-->
<!--            android:id="@+id/writeLinearLayoutNotes"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical" />-->

<!--    </ScrollView>-->







</RelativeLayout>